fix weird formatting with scroll bar (overflow-x: hidden in body - doesn't overlap with page content because the page has wide margins)

--- a/BeautyBuddy-frontend/src/components/NavigationBar.css
+++ b/BeautyBuddy-frontend/src/components/NavigationBar.css
@@ -1,6 +1,6 @@
 .navigation-bar {
     background-color: white;
-    width: 100%;
+    width: 100vw;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     padding: 10px 0;
 }
